--- a/app/dashboard/dashboard.component.html
+++ b/app/dashboard/dashboard.component.html
@@ -30,11 +30,11 @@
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-3">
-                        <i class="fa fa-comments fa-5x"></i>
+                        <i class="fa fa-money fa-5x"></i>
                     </div>
                     <div class="col-xs-9 text-right">
-                        <div class="huge">26</div>
-                        <div>New Comments!</div>
+                        <div class="huge">{{totalContasMes}}</div>
+                        <div>Novas Contas</div>
                     </div>
                 </div>
             </div>
@@ -193,73 +193,38 @@
     <div class="col-lg-4">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title"><i class="fa fa-money fa-fw"></i> Transactions Panel</h3>
+                <h3 class="panel-title"><i class="fa fa-money fa-fw"></i> Receita do Mês</h3>
             </div>
             <div class="panel-body">
                 <div class="table-responsive">
                     <table class="table table-bordered table-hover table-striped">
                         <thead>
                             <tr>
-                                <th>Order #</th>
-                                <th>Order Date</th>
-                                <th>Order Time</th>
-                                <th>Amount (USD)</th>
+                                <th>Nome</th>
+                                <th>Valor</th>
+                                <th>Data Pagamento</th>
+                                <th>Situação</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>3326</td>
-                                <td>10/21/2013</td>
-                                <td>3:29 PM</td>
-                                <td>$321.33</td>
-                            </tr>
-                            <tr>
-                                <td>3325</td>
-                                <td>10/21/2013</td>
-                                <td>3:20 PM</td>
-                                <td>$234.34</td>
-                            </tr>
-                            <tr>
-                                <td>3324</td>
-                                <td>10/21/2013</td>
-                                <td>3:03 PM</td>
-                                <td>$724.17</td>
-                            </tr>
-                            <tr>
-                                <td>3323</td>
-                                <td>10/21/2013</td>
-                                <td>3:00 PM</td>
-                                <td>$23.71</td>
-                            </tr>
-                            <tr>
-                                <td>3322</td>
-                                <td>10/21/2013</td>
-                                <td>2:49 PM</td>
-                                <td>$8345.23</td>
-                            </tr>
-                            <tr>
-                                <td>3321</td>
-                                <td>10/21/2013</td>
-                                <td>2:23 PM</td>
-                                <td>$245.12</td>
-                            </tr>
-                            <tr>
-                                <td>3320</td>
-                                <td>10/21/2013</td>
-                                <td>2:15 PM</td>
-                                <td>$5663.54</td>
-                            </tr>
-                            <tr>
-                                <td>3319</td>
-                                <td>10/21/2013</td>
-                                <td>2:13 PM</td>
-                                <td>$943.45</td>
+                            <tr *ngFor=" let conta of receitaModel">
+                                <td>{{conta.nome}}</td>
+                                <td>{{conta.valor | currency:'BRL':true:'1.2-2'}}</td>
+                                <td>{{conta.dataPagamento | date: 'dd/MM/yyyy'}}</td>
+                                <td>{{!conta.status ? 'Aberto' : 'Fechada'}}</td>
                             </tr>
                         </tbody>
+                        <tfoot>
+                            <tr>
+                                <th class="text-right">Total:</th>
+                                <td class="text-right">{{totalPagar | currency:'BRL':true:'1.2-2'}}</td>
+                                <td colspan="2"></td>
+                            </tr>
+                        </tfoot>
                     </table>
                 </div>
                 <div class="text-right">
-                    <a href="#">View All Transactions <i class="fa fa-arrow-circle-right"></i></a>
+                    <a [routerLink]="['/ReceitaListagem']">Ver todas <i class="fa fa-arrow-circle-right"></i></a>
                 </div>
             </div>
         </div>
