--- a/app/masterPage/masterPage.component.html
+++ b/app/masterPage/masterPage.component.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-            <a class="navbar-brand" href="index.html">SB Admin</a>
+            <a class="navbar-brand" [routerLink]="['/dashboard']">Thiago Finances <i class="fa fa-fw fa-money"></i> </a>
         </div>
         <!-- Top Menu Items -->
         <ul class="nav navbar-right top-nav">
