--- a/css/styleReceita.css
+++ b/css/styleReceita.css
@@ -35,13 +35,13 @@ section, footer, header, aside, nav {
 	Formulário de Pedido
 --------------------------*/
 
-form {
-	background-color: #61A1BC;
+.formReceita {
+	background-color: #a9a3a3;
 	border-radius: 2px;
 	box-shadow: 0 1px 1px #CCC;
 	/*width: 400px;*/
 	padding: 35px 60px;
-	margin: 80px auto; 
+	/*margin: 80px auto; */
 }
 
 form h1 {
@@ -64,7 +64,7 @@ form ul {
 
 form ul li {
 	padding: 20px 30px;
-	background-color: #E35885;
+	background-color: #43576f;
 	margin-bottom: 8px;
 	box-shadow: 0 1px 1px rgba(0,0,0,0.1);
 	cursor: pointer;
